syntax = "proto3";

option csharp_namespace = "NTDataHiveGrpcService";

import "google/protobuf/timestamp.proto";
import "Protos/status.proto";

package Person;

service PersonBackend {

    rpc SavePerson (PersonRequest) returns (google.rpc.Status);

    rpc GetAll (PersonEmpty) returns (PersonArray);

    rpc GetPersonRecord (PersonRecordFilter) returns (PersonRequest);
}
message PersonEmpty {
    
}
message PersonRequest {
    string webId = 1;
    string username = 2;
    string emailAddress = 3;
    string firstName = 4;
    string lastName = 5;
    string position = 6;
    string companyId = 7;
    string accountName = 8;
    string reportingManager = 9;
    string department = 10;
    string type = 11;
    google.protobuf.Timestamp birthday = 12;

    google.rpc.Status status = 99;
}

message PersonArray {
    repeated PersonRequest items = 1;

    google.rpc.Status status = 99;
}

message PersonRecordFilter {
    string webId = 1;
}
